--- a/Release/Kaggle_Submission.ipynb
+++ b/Release/Kaggle_Submission.ipynb
@@ -21,18 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_NAME = 'scrub_model.pth'\n",
+    "MODEL_NAME = 'better_model.pth'\n",
     "\n",
-    "CSV_NAME = 'cs4670pa3predictions.csv' # feel free to replace with desired CSV filename"
+    "CSV_NAME = 'my_preds.csv' # feel free to replace with desired CSV filename"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "autoscroll": false,
     "ein.tags": "worksheet-0",
@@ -40,16 +40,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 1\n",
@@ -90,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "autoscroll": false,
     "ein.tags": "worksheet-0",
@@ -153,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "autoscroll": false,
     "ein.tags": "worksheet-0",
@@ -190,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "autoscroll": false,
     "ein.tags": "worksheet-0",
@@ -205,7 +196,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "autoscroll": false,
     "ein.tags": "worksheet-0",
@@ -253,6 +244,13 @@
     "    df_submission.Category = df_submission.Category.astype(int)\n",
     "    df_submission.to_csv(CSV_NAME, index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
